--- a/index.html
+++ b/index.html
@@ -156,13 +156,13 @@
                 <input id='s3' name='slide1' type='radio'/> 
                 <div class='sh__content'>
                     <div class='sh__item'>
-                        <img alt='imgText' src='https://imgur.com/Dbxqp7A.png'/>
+                        <img alt='imgText' src='https://imgur.com/fGALczB.png'/>
                     </div>
                     <div class='sh__item'>
-                        <img alt='imgText' src='https://imgur.com/Dbxqp7A.png'/>
+                        <img alt='imgText' src='https://imgur.com/fGALczB.png'/>
                     </div>
                     <div class='sh__item'>
-                        <img alt='imgText' src='https://imgur.com/Dbxqp7A.png'/>
+                        <img alt='imgText' src='https://imgur.com/fGALczB.png'/>
                     </div>
                 </div>
             </div>
@@ -172,7 +172,7 @@
                 <iframe name="contenedorPlayer" class="cuadroBordeado" allow="autoplay" width="100%" height="100%" marginwidth="0" marginheight="0" hspace="0" vspace="0" frameborder="0" scrolling="no" src="https://vmzambrano.github.io/josimarsolis" data-ruffle-polyfilled=""></iframe>
             </div>
             <div class="perfil-facebook">
-               <iframe src="https://www.facebook.com/plugins/page.php?href=https%3A%2F%2Fwww.facebook.com%2F100071026092837&tabs=timeline&width=330&height=636&small_header=false&adapt_container_width=false&hide_cover=false&show_facepile=true&appId" width="330" height="636" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowfullscreen="true" allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share"></iframe>
+               <iframe src="https://www.facebook.com/plugins/page.php?href=https%3A%2F%2Fwww.facebook.com%2F100064085678281&tabs=timeline&width=330&height=636&small_header=false&adapt_container_width=false&hide_cover=false&show_facepile=true&appId" width="330" height="636" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowfullscreen="true" allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share"></iframe>
             </div>
         </div>
 
